--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ Even if there is something you have always wanted to experience and can't find i
             <div class="form">
               <div id="sendmessage">Your message has been sent. Thank you!</div>
               <div id="errormessage"></div>
-              <form action="" method="post" role="form" class="contactForm">
+              <form action="https://formspree.io/techelp2018@gmail.com" method="POST">
                 <div class="form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
                   <div class="validation"></div>
@@ -444,7 +444,7 @@ Even if there is something you have always wanted to experience and can't find i
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="text-center"><button type="submit" value="Send Message"></button></div>
               </form>
             </div>
           </div>
