--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ Even if there is something you have always wanted to experience and can't find i
                   <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
                   <div class="validation"></div>
                 </div>
-                <div class="text-center"><input type="submit" value="Send"></div>
+                <div class="text-center"><button type="submit">Send Message</button></div>
               </form>
             </div>
           </div>
