--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Welcome to TecHelp</h1>
-      <h2>We are team of talanted designers making websites with Bootstrap</h2>
+      <h2>We are team of talanted designers making websites.</h2>
       <a href="#about" class="btn-get-started">Get Started</a>
     </div>
   </section><!-- #hero -->
